--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="description" content="예뻐지는 상상이 현실이 되길 꿈꾸는 에뛰드의 공식 사이트입니다.">
     <meta property="og:type" content="website">
     <meta property="og:title" content="에뛰드 공식 웹사이트 | ETUDE">
-    <meta property="og:url" content="http://hong404.dothome.co.kr/etude">
+    <meta property="og:url" content="https://h-joha.github.io/etude">
     <meta property="og:description" content="예뻐지는 상상이 현실이 되길 꿈꾸는 에뛰드의 공식 사이트입니다.">
-    <meta property="og:image" content="http://hong404.dothome.co.kr/etude/images/og_etude.jpg">
+    <meta property="og:image" content="https://h-joha.github.io/etude/images/og_etude.jpg">
     <title>에뛰드</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico?v=1">
     <link rel="apple-touch-icon" href="images/favicon.ico">
